...
            "value" : "لا توجد نتائج"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "No results found"
          }
        }
      }
    },
    "retry" : {
      "extractionState" : "manual",
...
